--- a/SingtoSleep/Base.lproj/Main.storyboard
+++ b/SingtoSleep/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ddu-ey-ytk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rCw-Ma-ZQh">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -59,6 +59,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1117" y="387"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ZFv-zQ-K5p">
+            <objects>
+                <viewController id="rCw-Ma-ZQh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="J3R-KS-FM9"/>
+                        <viewControllerLayoutGuide type="bottom" id="CKi-E2-Kkh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oh9-WB-N6e">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6h4-DP-Xpk" customClass="YTPlayerView">
+                                <rect key="frame" x="30" y="30" width="540" height="560"/>
+                                <color key="backgroundColor" red="1" green="0.2120572751" blue="0.22625692089999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CKi-E2-Kkh" firstAttribute="top" secondItem="6h4-DP-Xpk" secondAttribute="bottom" constant="10" id="7Xk-gG-ZIm"/>
+                            <constraint firstItem="6h4-DP-Xpk" firstAttribute="top" secondItem="J3R-KS-FM9" secondAttribute="bottom" constant="10" id="EQk-1X-8Ks"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6h4-DP-Xpk" secondAttribute="trailing" constant="10" id="g3X-uk-3sd"/>
+                            <constraint firstItem="6h4-DP-Xpk" firstAttribute="leading" secondItem="oh9-WB-N6e" secondAttribute="leadingMargin" constant="10" id="nqY-pS-zKk"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SMD-Ou-H5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1117" y="1089"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="VuH-SA-07X">
