--- a/SingtoSleep/Base.lproj/Main.storyboard
+++ b/SingtoSleep/Base.lproj/Main.storyboard
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rCw-Ma-ZQh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rCw-Ma-ZQh">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,17 +20,17 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 is not relaxing, 5 is very relaxing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ea4-yf-1vN">
-                                <rect key="frame" x="30" y="220" width="540" height="20"/>
+                                <rect key="frame" x="26" y="220" width="323" height="20"/>
                                 <fontDescription key="fontDescription" name="Geneva" family="Geneva" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BkE-mo-xtt">
-                                <rect key="frame" x="500" y="550" width="60" height="30"/>
+                                <rect key="frame" x="279" y="617" width="60" height="30"/>
                                 <state key="normal" title="continue"/>
                                 <connections>
                                     <segue destination="Vt6-JQ-AEy" kind="show" id="gVG-hh-GVI">
@@ -36,13 +40,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rate the following genres" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qAZ-5v-yAZ">
-                                <rect key="frame" x="30" y="162" width="540" height="24"/>
+                                <rect key="frame" x="26" y="162" width="323" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="qAZ-5v-yAZ" secondAttribute="trailing" constant="10" id="DAT-tY-Fpf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ea4-yf-1vN" secondAttribute="trailing" constant="10" id="NEG-JY-8PI"/>
@@ -69,15 +73,15 @@
                         <viewControllerLayoutGuide type="bottom" id="CKi-E2-Kkh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="oh9-WB-N6e">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6h4-DP-Xpk" customClass="YouTubePlayerView" customModule="YouTubePlayer">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6h4-DP-Xpk" customClass="YouTubePlayerView" customModule="YouTubePlayer">
                                 <rect key="frame" x="30" y="30" width="540" height="560"/>
-                                <color key="backgroundColor" red="1" green="0.2120572751" blue="0.22625692089999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="0.2120572751" blue="0.22625692089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="CKi-E2-Kkh" firstAttribute="top" secondItem="6h4-DP-Xpk" secondAttribute="bottom" constant="10" id="7Xk-gG-ZIm"/>
                             <constraint firstItem="6h4-DP-Xpk" firstAttribute="top" secondItem="J3R-KS-FM9" secondAttribute="bottom" constant="10" id="EQk-1X-8Ks"/>
@@ -93,45 +97,45 @@
             </objects>
             <point key="canvasLocation" x="1117" y="1089"/>
         </scene>
-        <!--View Controller-->
+        <!--Rating View Controller-->
         <scene sceneID="VuH-SA-07X">
             <objects>
-                <viewController id="Vt6-JQ-AEy" sceneMemberID="viewController">
+                <viewController id="Vt6-JQ-AEy" customClass="RatingViewController" customModule="SingtoSleep" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UxD-vA-ktQ"/>
                         <viewControllerLayoutGuide type="bottom" id="sIU-Tx-hgw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="KpK-Eo-srK">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="445" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hdk-Oh-MNe">
-                                <rect key="frame" x="20" y="64" width="560" height="536"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="16" y="64" width="343" height="603"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="DRb-pe-NtC">
-                                        <rect key="frame" x="0.0" y="92" width="560" height="445"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RatingTableCell" id="DRb-pe-NtC" customClass="RatingTableViewCell" customModule="SingtoSleep" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="445"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DRb-pe-NtC" id="tU9-TB-Tlc">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="444"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="445"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="1wm-Rg-2Qo">
-                                                    <rect key="frame" x="348" y="53" width="204" height="31"/>
+                                                    <rect key="frame" x="131" y="53" width="204" height="31"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="EWR-u3-Et2"/>
                                                         <constraint firstAttribute="width" constant="200" id="ntl-Kg-eUd"/>
                                                     </constraints>
                                                 </slider>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Genre" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZR-a8-DbM">
-                                                    <rect key="frame" x="112" y="58" width="233" height="21"/>
+                                                    <rect key="frame" x="112" y="58" width="16" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XRs-Lx-fKM">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XRs-Lx-fKM" customClass="YouTubePlayerView">
                                                     <rect key="frame" x="24" y="18" width="101" height="101"/>
-                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="101" id="2ZT-S8-cHk"/>
                                                         <constraint firstAttribute="height" constant="101" id="X7p-5e-0Qv"/>
@@ -148,11 +152,15 @@
                                                 <constraint firstItem="oZR-a8-DbM" firstAttribute="leading" secondItem="XRs-Lx-fKM" secondAttribute="trailing" constant="-13" id="sfa-Pr-Mqs"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ratingSlider" destination="1wm-Rg-2Qo" id="xIM-pO-1NE"/>
+                                            <outlet property="ratingVideo" destination="XRs-Lx-fKM" id="Cln-HA-FPT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="hdk-Oh-MNe" firstAttribute="leading" secondItem="KpK-Eo-srK" secondAttribute="leadingMargin" id="Aps-gY-dsN"/>
                             <constraint firstItem="hdk-Oh-MNe" firstAttribute="top" secondItem="UxD-vA-ktQ" secondAttribute="bottom" id="PMu-JP-95V"/>
@@ -160,6 +168,9 @@
                             <constraint firstItem="sIU-Tx-hgw" firstAttribute="top" secondItem="hdk-Oh-MNe" secondAttribute="bottom" id="hZQ-57-DMZ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ratingTableView" destination="hdk-Oh-MNe" id="pzD-4R-5gu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aC7-cj-T8I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
