--- a/SingtoSleep/Base.lproj/Main.storyboard
+++ b/SingtoSleep/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pz5-8z-H6d">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pz5-8z-H6d">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +23,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="136"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9HQ-qb-GMz" id="vyu-E4-u6O">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="135.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SVE-yR-XPn">
@@ -34,36 +35,51 @@
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUE-fj-8Px">
                                             <rect key="frame" x="136" y="8" width="231" height="21"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="yKO-mk-k3r"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UD9-UY-Om4">
-                                            <rect key="frame" x="136" y="37" width="231" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="a7i-JQ-wKU"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emH-DW-McM">
+                                            <rect key="frame" x="136" y="53" width="46" height="30"/>
+                                            <state key="normal" title="Dislike">
+                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="dislikeButtonPressed:" destination="9HQ-qb-GMz" eventType="touchUpInside" id="dfJ-d1-D2V"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9F-Gc-L7G">
+                                            <rect key="frame" x="250" y="53" width="46" height="30"/>
+                                            <state key="normal" title="Like">
+                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="likeButtonPressed:" destination="9HQ-qb-GMz" eventType="touchUpInside" id="wv5-79-d5C"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="SVE-yR-XPn" firstAttribute="top" secondItem="vyu-E4-u6O" secondAttribute="top" constant="8" id="6P7-VJ-zbO"/>
                                         <constraint firstItem="SVE-yR-XPn" firstAttribute="leading" secondItem="vyu-E4-u6O" secondAttribute="leading" constant="8" id="8vG-A0-H28"/>
                                         <constraint firstItem="gUE-fj-8Px" firstAttribute="leading" secondItem="SVE-yR-XPn" secondAttribute="trailing" constant="8" id="EDl-aS-gfh"/>
-                                        <constraint firstItem="UD9-UY-Om4" firstAttribute="leading" secondItem="SVE-yR-XPn" secondAttribute="trailing" constant="8" id="UWF-jU-3r6"/>
+                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="leading" secondItem="emH-DW-McM" secondAttribute="trailing" constant="68" id="ERv-1n-Ahz"/>
+                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="top" secondItem="gUE-fj-8Px" secondAttribute="bottom" constant="24" id="GR3-eK-ic1"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="f9F-Gc-L7G" secondAttribute="trailing" constant="71" id="P43-r1-p7j"/>
+                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="leading" secondItem="emH-DW-McM" secondAttribute="trailing" constant="68" id="UWg-Ly-Ujt"/>
                                         <constraint firstAttribute="trailing" secondItem="gUE-fj-8Px" secondAttribute="trailing" constant="8" id="WaT-d7-9T9"/>
                                         <constraint firstItem="gUE-fj-8Px" firstAttribute="top" secondItem="vyu-E4-u6O" secondAttribute="top" constant="8" id="Zwe-6B-mdH"/>
-                                        <constraint firstItem="UD9-UY-Om4" firstAttribute="top" secondItem="gUE-fj-8Px" secondAttribute="bottom" constant="8" id="vYO-1G-4s5"/>
-                                        <constraint firstAttribute="trailing" secondItem="UD9-UY-Om4" secondAttribute="trailing" constant="8" id="yfr-rB-7L5"/>
+                                        <constraint firstItem="emH-DW-McM" firstAttribute="top" secondItem="gUE-fj-8Px" secondAttribute="bottom" constant="24" id="dwq-Ya-0DH"/>
+                                        <constraint firstItem="emH-DW-McM" firstAttribute="leading" secondItem="SVE-yR-XPn" secondAttribute="trailing" constant="8" id="sa4-yS-xwk"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <outlet property="songArtistLabel" destination="UD9-UY-Om4" id="eHq-I3-is0"/>
+                                    <outlet property="dislikeButton" destination="emH-DW-McM" id="zr0-hL-Utf"/>
+                                    <outlet property="likeButton" destination="f9F-Gc-L7G" id="0x8-QN-mq7"/>
                                     <outlet property="songImageView" destination="SVE-yR-XPn" id="HgU-BS-AfE"/>
                                     <outlet property="songTitleLabel" destination="gUE-fj-8Px" id="drk-mz-BcF"/>
                                 </connections>
